# DisposableBox

./: .gitignore  Cargo.toml  README.md  app.py  container_card.py  create_container_dialog.py  create_spinner.py  iso_manager.py  qflow_layout.py  requirements.txt  settings.py
.github/workflows/: build.yml
backend/: async_worker.py
frontend/: container_card.py  create_container_dialog.py  log_panel.py  notification.py
src/: main.rs
src/frontend/: container_card.py  create_container_dialog.py
