[package]
name = "container_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.22", features = ["default_fonts", "persistence"] }
egui = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rfd = "0.11"
chrono = "0.4"

[dependencies.winapi]
version = "0.3.9"
features = [
    "winuser",
    "windef",
    "shellapi",
    "commctrl",
    "wingdi"
]

[build-dependencies]
winres = "0.1"

# Optimize release builds
[profile.release]
opt-level = 2
strip = true
lto = true
codegen-units = 1